Bug 367786 - Crash when I use VI input mode with the option "Let VI commands override Kate Shortcuts" and the Key Shift in command line ":"
Summary: Crash when I use VI input mode with the option "Let VI commands override Kate...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: Vi Input Mode (other bugs)
Version First Reported In: 16.04
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 364816 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-08-25 03:54 UTC by Johan Smith
Modified: 2016-09-05 10:14 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Johan Smith 2016-08-25 03:54:14 UTC
Apparently you can not use the command line VI with the Shift key

Reproducible: Always

Steps to Reproduce:
1. First enable the preference on Editing > VI Input Mode >  Let VI commands override Kate Shortcuts.
2. After close the preferences window, and press ":" to write into command line of VI.
3. Now press the Shift key and Kate will crash.

Actual Results:  
Occur an Segmentation fault.


This no occur when the option "Let VI commands override Kate Shortcuts." is unchecked. 
Furthermore I tried the AppImage of KDevelop5.0 and also crashed.
Comment 1 Dominik Haumann 2016-09-02 12:23:16 UTC
Do you also have a backtrace ?

Also, it would be nice to get a trace by reproducing the crash when running valgrind:
valgrind kate

@Simon: Can you have a look?
Comment 2 Simon St James 2016-09-02 12:26:37 UTC
Will need to see the backtrace to know for certain, but is very probably a dupe of https://bugs.kde.org/show_bug.cgi?id=364650
Comment 3 Johan Smith 2016-09-03 01:46:25 UTC
I don't see nothing useful in this output :(
Doesn't ocurr in other distribution?

valgrind --track-origins=yes kate
==5233== Memcheck, a memory error detector
==5233== Copyright (C) 2002-2013, and GNU GPL'd, by Julian Seward et al.
==5233== Using Valgrind-3.10.1 and LibVEX; rerun with -h for copyright info
==5233== Command: kate
==5233==
QObject::connect: invalid null parameter
QObject::connect: invalid null parameter
QObject::connect: Cannot connect (null)::returnPressed() to KUrlRequester::returnPressed()
QObject::connect: Cannot connect (null)::returnPressed(QString) to KUrlRequester::returnPressed(QString)
==5233== Stack overflow in thread 1: can't grow stack to 0xffe801ff8
==5233==
==5233== Process terminating with default action of signal 11 (SIGSEGV)
==5233==  Access not within mapped region at address 0xFFE801FF8
==5233==    at 0x960FBF7: QMetaObject::cast(QObject const*) const (in /usr/lib64/libQt5Core.so.5.7.0)
==5233==  If you believe this happened as a result of a stack
==5233==  overflow in your program's main thread (unlikely but
==5233==  possible), you can try to increase the size of the
==5233==  main thread stack using the --main-stacksize= flag.
==5233==  The main thread stack size used in this run was 8388608.
==5233==
==5233== HEAP SUMMARY:
==5233==     in use at exit: 9,803,148 bytes in 102,511 blocks
==5233==   total heap usage: 692,599 allocs, 590,088 frees, 84,355,015 bytes allocated
==5233==
==5233== LEAK SUMMARY:
==5233==    definitely lost: 4,952 bytes in 20 blocks
==5233==    indirectly lost: 1,043 bytes in 38 blocks
==5233==      possibly lost: 1,098,634 bytes in 4,033 blocks
==5233==    still reachable: 8,698,519 bytes in 98,420 blocks
==5233==         suppressed: 0 bytes in 0 blocks
==5233== Rerun with --leak-check=full to see details of leaked memory
==5233==
==5233== For counts of detected and suppressed errors, rerun with: -v
==5233== ERROR SUMMARY: 0 errors from 0 contexts (suppressed: 1 from 1)
Terminado (killed)
Comment 4 Dominik Haumann 2016-09-03 08:59:46 UTC
Indeed this trace does not help.

If this is really duplicate of bug #364650, then this issue should be fixed with KDE Framworks v5.26, which will be released next week. So I'll closed as RESOLVED - WAITING FOR INFO. If you can, please come back to us when you tested this.
Comment 5 Christoph Cullmann 2016-09-03 15:31:22 UTC
Git commit f9f6f2383f3a3524e55e118fa73430236189ed58 by Christoph Cullmann, on behalf of Leandro Santiago.
Committed on 03/09/2016 at 15:29.
Pushed by cullmann into branch 'master'.

Fix constant crashes related to the vi command bar

Differential Revision: https://phabricator.kde.org/D2643

M  +5    -2    src/vimode/emulatedcommandbar/emulatedcommandbar.cpp

http://commits.kde.org/ktexteditor/f9f6f2383f3a3524e55e118fa73430236189ed58
Comment 6 Dominik Haumann 2016-09-05 10:14:52 UTC
*** Bug 364816 has been marked as a duplicate of this bug. ***