Fix constant crashes related to the vi command bar

Differential Revision: https://phabricator.kde.org/D2643

BUG: 367786